EWL-9967: Upvote icon on mobile fix.

--- a/styleguide/source/assets/scss/02-molecules/_upvote.scss
+++ b/styleguide/source/assets/scss/02-molecules/_upvote.scss
@@ -11,11 +11,13 @@
     fill: #aaa;
     position: absolute;
     bottom: 0;
+    left: 0;
   }
   .thumbs-active {
     fill: $purple;
     position: absolute;
     bottom: 0;
+    left: 0;
   }
 
   &:hover {
